# 3D-Object-Detection-from-LiDAR

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
assets/: README.md
configs/: config.yaml
configs/data/: kitti.yaml
configs/evaluation/: default.yaml
configs/model/: pointpillars.yaml
configs/training/: default.yaml
data/: README.md
demo/: streamlit_demo.py
scripts/: benchmark.py  evaluate.py  quick_start.py  train.py
src/data/: __init__.py  datasets.py
src/eval/: __init__.py
src/layers/: __init__.py
src/models/: __init__.py
src/train/: __init__.py
src/utils/: __init__.py
tests/: test_models.py
